fixed button text centering on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -35,60 +35,32 @@
     margin: 5px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
+#mfpanel > button{
+    background-color: black;
+    color: white;
+    gap:20px;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 0 5px #000000,
+    inset 0 0 0 1px #fff;
+    width: 60px;
+    text-align: center;
+}
+
 
 #ENG{
-    background-color: black;
-    color: white;
     font-size:large ;
-    gap:20px;
-    margin: 10px;
-    border-radius: 10px;
-    box-shadow: 0 0 0 5px #000000,
-    inset 0 0 0 1px #fff;
-    width: 60px;
 }
 #SYS{
-    background-color: black;
-    color: white;
     font-size:large ;
-    gap:20px;
-    margin: 10px;
-    border-radius: 10px;
-    box-shadow: 0 0 0 5px #000000,
-    inset 0 0 0 1px #fff;
-    width: 60px;
 }
 #INFO{
-    background-color: black;
-    color: white;
     font-size:large ;
-    gap:20px;
-    margin: 10px;
-    border-radius: 10px;
-    box-shadow: 0 0 0 5px #000000,
-    inset 0 0 0 1px #fff;
-    width: 60px;
 }
 #CR{
-    background-color: black;
-    color: white;
     font-size:large ;
-    gap:20px;
-    margin: 10px;
-    border-radius: 10px;
-    box-shadow: 0 0 0 5px #000000,
-    inset 0 0 0 1px #fff;
-    width: 60px;
 }
 #dArrow {
-    background-color: black;
-    color: white;
-    gap:20px;
-    margin: 10px;
-    border-radius: 10px;
-    box-shadow: 0 0 0 5px #000000,
-    inset 0 0 0 1px #fff;
-    width: 60px;
     font-size: 30px;
     grid-column-start: 1;
     grid-column-end: 3;
